--- a/dailystudy/9.15/call,apply.html
+++ b/dailystudy/9.15/call,apply.html
@@ -37,21 +37,7 @@
 
 
 
-//  function Rose(name,time,sex){
-//      this.name = name;
-//      this.time = time;
-//      this.sex = sex
-//  }
-// function Flower(name,time,sex,xiang,){
-//     // this.name = name;
-//     // this.time = time;
-//     // this.sex = sex;
-
-//     //   var this = {name:"",time:"",sex:"",xiang:""}
-//     Rose.call(this,name,time,sex,xiang)
-//     this.xiang = xiang;
-// }
-// var flower = new Flower("redRose","6years","male","very");
+ 
 
 
 
@@ -173,11 +159,12 @@
     //     var a;
     //     document.write(c);//undefined
     //     document.write(a);//10
+    //     document.write(b);//
     // }
     // var a ;
     // demo(1);
     // document.write(a);//100
-    // document.write(f);//undefined
+    // // document.write(f);//undefined
 
 
 
