--- a/dailystudy/9.22/this.html
+++ b/dailystudy/9.22/this.html
@@ -414,15 +414,16 @@
 
 
                             // 模拟pop方法，用不来
+                            // var arr2= [1,2,3,4,5];
                             // Array.prototype.pop = function(){//在数组的最后去除数字
                             //         var arr1 = [];
-                            //     for(var i = 0;i < num;i ++){
+                            //         // var num = this.length - 1;
+                            //     for(var i = 0;i < (this.length - 1);i ++){
                             //        arr1[i] = this[i];//for循环中放循环体
-                            //        this[i] = arr1[i];
-                            //         var num = this.length - 1;
+                            //     //    this[i] = arr1[i];
 
                             //     }
-                                
+                            //     return arr1;
                             //     // this  = [];
                             //         // return this;
                             // }
