--- a/dailystudy/10.18/index.html
+++ b/dailystudy/10.18/index.html
@@ -264,11 +264,11 @@
             <li img-date= "0"></li>
             <li img-date= "0"></li>
             <li img-date= "0"></li>
-            <li img-date= "0">你</li>
+            <li img-date= "0">宝</li>
+            <li img-date= "0">宝</li>
             <li img-date= "0">最</li>
-            <li img-date= "0">帅</li>
-            <li img-date= "0"></li>
-            <li img-date= "0"></li>
+            <li img-date= "0">好</li>
+            <li img-date= "0">了</li>
             <li img-date= "0"></li>
             <li img-date= "0"></li>
             <li img-date= "0"></li>
