--- a/dailystudy/10.18/demo1.html
+++ b/dailystudy/10.18/demo1.html
@@ -127,8 +127,17 @@ aswe
         //         div.appendChild(elem[i]) ;
         // }
             
+    //    老师方法：  appendChild的剪切功能
+    // var div = document.getElementsByTagName('div')[0];
+    // var p = div.getElementsByTagName('p')[0];
+    // var a = document.getElementsByTagName('a')[0];
+    // div.appendChild(a);
+    // div.appendChild(p);
 
 
+
+
+//     不可用方法
     //    var div = document.getElementsByTagName('div')[0];
     //    var a = document.getElementsByTagName('a')[0];
     //    var p = document.getElementsByTagName('p')[0];
