--- a/dailystudy/10.24/date.html
+++ b/dailystudy/10.24/date.html
@@ -56,7 +56,33 @@
         // }
 
     </script>
-
-
+    <style>
+    input{
+        font-size: 20px;
+        text-align: right;
+        font-weight: bold;
+    }
+    </style>
+    seconds:<input type="text" value = "0">
+    minutes:<input type="text" value = "0">
+    <script>
+    // var timer = setInterval(function () {
+    //         var one = document.getElementsByTagName('input')[0];
+    //         var two = document.getElementsByTagName('input')[1];
+    //         var val = one.getAttribute("value");
+    //         var min = two.getAttribute("value");
+    //         val++;
+    //         if (val == 59) {
+    //             val = 0;
+    //             min++;
+    //             if (min == 3) {
+    //                 clearInterval(timer);
+    //             }
+    //         }
+    //         two.setAttribute("value", min);
+    //         one.setAttribute("value", val);
+    //     }, 10)
+    // var one = document.getElementsByTagName('input')[0];
+    </script>
 </body>
 </html>
