--- a/dailystudy/10.31/json.html
+++ b/dailystudy/10.31/json.html
@@ -17,6 +17,7 @@
 
     // domTree +  cssTree  =  randerTree
     // reflow 重排  dom节点的删除，添加
+    //              dom节点
     </script>
 </body>
 </html>
