--- a/dailystudy/10.31/homework.html
+++ b/dailystudy/10.31/homework.html
@@ -39,7 +39,9 @@
     //     // console.log(i)
     // }
     
-    
+    // document.onclick = function(e){
+    //     console.log(e.button)
+    // }
     </script>
 </body>
 </html>
